add some text to the selector

--- a/templates/admin/map.html
+++ b/templates/admin/map.html
@@ -25,7 +25,7 @@
         #controls {
             top: 10px;
             left: 110px;
-            width: 200px;
+            width: 290px;
             height: 32px;
         }
     </style>
@@ -38,6 +38,7 @@
 </head>
 <body>
 <div id="controls" class="nicebox">
+    Pickup Date:
     <select id="dateSelect">
     </select>
 
